# parserka

./: CHANGELOG.md  LICENSE  README.md  parserka.cabal  stack.yaml  test.yaml  test2.yaml
app/: Main.hs  Program.hs
src/Parserka/: Parser.hs  Pretty.hs  YAML.hs  YamlLexer.hs  YamlParser.hs
src/Parserka/YAML/: Lexer.hs  Parser.hs
