cabal-version:       2.2

name:                parserka
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Dimankarp/parserka#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Mitya Kh.
maintainer:          marinad1814@yandex.ru
copyright:           BSD
category:            parser
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Parserka.Parser,
                       Parserka.YAML.Lexer,
                       Parserka.YAML.Parser
  build-depends:       base >= 4.7 && < 5,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable YAMLparserka
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Program
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       optparse-applicative,
                       parserka
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/Dimankarp/parserka
